# HandIsomorphism.jl

./: .gitmodules  CMakeLists.txt  LICENSE  Manifest.toml  Project.toml  README.md
.github/workflows/: CI.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl
docs/src/: index.md
src/: HandIsomorphism.jl  recall.jl
test/: runtests.jl
